# dmac

./: .env  Cargo.toml  README.md
src/: config.rs  macd.rs  main.rs
src/binance/: exec.rs  info.rs  mod.rs  msg.rs  trader.rs  utils.rs
