[package]
name = "dmac"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
hex = "0.4"
hmac = "0.11"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
ta = "0.4"
tokio = { version = "1.6", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.14", features = [ "native-tls", "rustls-tls" ] }
